# icarus

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  download-net.py  network.txt  score_distribution.txt
icarus-board/: Cargo.toml  build.rs  perft960.txt
icarus-board/src/: attack_generators.rs  board.rs  castling.rs  ep_file.rs  is_legal.rs  lib.rs  move.rs  movegen.rs  perft.rs  ray_space.rs  threat_table.rs  zobrist.rs
icarus-board/src/is_legal/: test.rs
icarus-board/src/ray_space/: avx2.rs  bmi2.rs
icarus-board/src/setwise_attacks/: avx2.rs  avx512.rs  generic.rs  mod.rs
icarus-common/: Cargo.toml
icarus-common/src/: bitboard.rs  direction.rs  lib.rs  lookups.rs  move.rs  piece.rs  square.rs  util.rs
nets/: .gitignore
sprt/: .gitignore  stc.sh  stc_nonreg.sh
src/: bench.rs  datagen.rs  engine.rs  main.rs  pesto.rs  position.rs  score.rs  test_islegal.rs  uci.rs  wdl.rs  weights.rs
src/datagen/: genfens.rs  internal.rs  mod.rs
src/nnue/: accumulator.rs  inference.rs  mod.rs  network.rs
src/nnue/inference/: avx2.rs  avx512.rs  generic.rs
src/search/: history.rs  lmr.rs  mod.rs  move_picker.rs  params.rs  search.rs  searcher.rs  time_manager.rs  transposition_table.rs
src/search/history/: cont.rs  contcorr.rs  corr.rs  main.rs  mod.rs  tactic.rs
src/util/: atomic_instant.rs  buffered_counter.rs  command_channel.rs  mod.rs  tunable.rs
