[package]
name = "icarus"
version = "0.0.0"
edition = "2024"

[dependencies]
icarus-common = { path = "icarus-common" }
icarus-board = { path = "icarus-board" }
arrayvec = "0.7.6"
rustyline = "17.0.2"
thiserror = "2.0.17"
atomic-wait = "1.1.0"
smallvec = "1.15.1"
rand = { version = "0.9.2", features = ["small_rng"] }
anyhow = "1.0.100"
cfg-if = "1.0.4"
viriformat = { version = "3.0.0", optional = true }
clap = { version = "4.5.60", features = ["derive"], optional = true }
indicatif = { version = "0.18.4", optional = true }

[workspace]
members = ["icarus-board", "icarus-common"]

[features]
use-bmi2 = ["icarus-board/use-bmi2"]
test-islegal = ["icarus-board/test-islegal"]
datagen = ["dep:viriformat", "dep:clap", "dep:indicatif"]
default = ["use-bmi2", "datagen"]
